refactor: improve statistics part